--- a/demo-web/src/main/webapp/html/pay/pay.html
+++ b/demo-web/src/main/webapp/html/pay/pay.html
@@ -6,7 +6,7 @@
 <meta charset="UTF-8" />
 <title>Wechat Pay</title>
 
-<script src="../js/jquery-3.1.1.min.js"></script>
+<script src="../lib/jquery-1.7.2.min.js" type="text/javascript"></script>
 <script src="pay.js"></script>
 <style>
 body {
